--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <main class="main">
         <section class="main__ingreso">
-            <textarea name="codigo__a__encriptar" id="main__ingreso__textarea" placeholder="Ingrese aquí el texto"></textarea>
+            <textarea name="codigo__a__encriptar" id="main__ingreso__textarea" onkeydown="caracterNoAdmitido()" placeholder="Ingrese aquí el texto"></textarea>
 
             <div class="main__advertencia">
                 <img src="./assets/exclamacion.png" alt="Signo exclamacion gris" class="main__advertencia__imagen">
