--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <title>Encriptador de Texto</title>
     <link rel="stylesheet" href="./styles/normalize.css">
     <link rel="stylesheet" href="./styles/style.css">
-    <script src="/app.js"></script>
 </head>
 
 <body>
@@ -19,7 +18,7 @@
 
     <main class="main">
         <section class="main__ingreso">
-            <textarea name="codigo__a__encriptar" id="main__ingreso__textarea" onkeydown="caracterNoAdmitido(event)" placeholder="Ingrese aquí el texto"></textarea>
+            <textarea name="codigo__a__encriptar" id="main-ingreso-textarea" onkeydown="caracterNoAdmitido(event)" placeholder="Ingrese aquí el texto"></textarea>
 
             <div class="main__advertencia">
                 <img src="./assets/exclamacion.png" alt="Signo exclamacion gris" class="main__advertencia__imagen">
@@ -51,6 +50,8 @@
         <p class="footer__texto">Desarrollado por Miguel</p>
     </footer>
     
+    <script src="/app.js"></script>
+
 </body>
 
 </html>
