--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <main class="main">
         <section class="main__ingreso">
-            <textarea name="codigo__a__encriptar" id="main-ingreso-textarea" placeholder="Ingrese aquí el texto"></textarea>
+            <textarea name="codigo__a__encriptar" class="main__ingreso__textarea" id="main-ingreso-textarea" placeholder="Ingrese aquí el texto"></textarea>
 
             <div class="main__advertencia">
                 <img src="./assets/exclamacion.png" alt="Signo exclamacion gris" class="main__advertencia__imagen">
@@ -26,20 +26,20 @@
             </div>
 
             <div class="main__buttons">
-                <button id="main-button-encriptar" onclick="encriptar();">Encriptar</button>
-                <button id="main-button-desencriptar" onclick="desencriptar();">Desencriptar</button>
+                <button class="main__button__encriptar" id="main-button-encriptar" onclick="encriptar();">Encriptar</button>
+                <button class="main__button__desencriptar" id="main-button-desencriptar" onclick="desencriptar();">Desencriptar</button>
             </div>
 
         </section>
 
         <section class="main__devolucion">
-            <div id="main__devolucion__muneco">
+            <div class="main__devolucion__muneco" id="main-devolucion-muneco">
                 <img src="./assets/muneco.png" alt="Muñeco buscando si hay algún mensaje para desencriptar" class="main__devolucion__img">
                 <h2 class="main__devolucion__titulo">Ningún mensaje fue encontrado</h2>
                 <p class="main__devolucion__texto">Ingrese el texto que desees encriptar o desencriptar.</p>
             </div>
 
-            <div id="main__devolucion__encripto" hidden>
+            <div id="main-devolucion-encripto" hidden>
                 <textarea name="codigo_a_desencriptar" class="main__devolucion__encriptado" id="main-devolucion-textarea" readonly></textarea>
                 <button class="main__devolucion__button__copiar" id="main-devolucion-copiar" onclick="copiar();">Copiar</button>
             </div>
