Agregado style de la devolucion y boton copiar

--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
                 <p class="main__devolucion__texto">Ingrese el texto que desees encriptar o desencriptar.</p>
             </div>
 
-            <div id="main-devolucion-encripto" hidden>
-                <textarea name="codigo_a_desencriptar" class="main__devolucion__encriptado" id="main-devolucion-textarea" readonly></textarea>
-                <button class="main__devolucion__button__copiar" id="main-devolucion-copiar" onclick="copiar();">Copiar</button>
+            <div class="main__devolucion__encripto" id="main-devolucion-encripto" hidden>
+                <textarea name="codigo_a_desencriptar" class="main__devolucion__textarea" id="main-devolucion-textarea" readonly></textarea>
+                <button class="main__devolucion__copiar" id="main-devolucion-copiar" onclick="copiar();">Copiar</button>
             </div>
         </section>
 
