--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <p class="footer__texto">Desarrollado por Miguel</p>
     </footer>
     
-    <script src="/app.js"></script>
+    <script src="./app/app.js"></script>
 
 </body>
 
