--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
 <body>
 
     <header class="header">
-        <img src="./assets/logo.png" alt="Logo Alura Latam" class="header__imagen">
+        <img src="./assets/logo.png" alt="Logo Alura Latam" class="header__imagen" id="logo-alura">
         <h1 class="header__titulo">¡Bienvenido al encriptador de texto!</h1>        
     </header>
 
     <main class="main">
         <section class="main__ingreso">
-            <textarea name="codigo__a__encriptar" class="main__ingreso__textarea" id="main-ingreso-textarea" placeholder="Ingrese aquí el texto" onkeyup="clearMuneco();"></textarea>
+            <textarea name="codigo__a__encriptar" class="main__ingreso__textarea" id="main-ingreso-textarea" placeholder="Ingrese aquí el texto" ></textarea>
 
             <div class="main__advertencia">
                 <img src="./assets/exclamacion.png" alt="Signo exclamacion gris" class="main__advertencia__imagen">
