--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     </main>
 
     <footer class="footer">
-        <p class="footer__texto">Desarrollado por Miguel</p>
+        <p class="footer__texto">Desarrollado por <a class="footer__github" href="https://github.com/MigueBlack93" target="_blank" noopener noreferrer nofollow>Miguel</a> - 2024</p>
     </footer>
     
     <script src="./app/app.js"></script>
