--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Encriptador de Texto</title>
-    <link rel="stylesheet" href="/styles/normalize.css">
-    <link rel="stylesheet" href="/styles/style.css">
-    <link rel="icon" href="/assets/icono.png">
+    <link rel="stylesheet" href="./styles/normalize.css">
+    <link rel="stylesheet" href="./styles/style.css">
+    <link rel="icon" href="./assets/icono.png">
     <meta name="author" content="Miguel Ulmi">
     <meta name="description" content="Este es el encriptador de texto del Primer Challenge de Alura en Oracle Next Education Grupo 7">
     <meta name="keywords" content="encriptador, encriptador de texto, challenge Alura, Alura, ONE, Oracle Next Education, desencriptador, desencriptador de texto">
